# qrserver

./: .gitignore  LICENSE  README.md  cyclegit_example  pyproject.toml  run_example  server_qr.conf
app/: access_log.py  main.py  redirect_log.py  server.py  version.py
app/config/: README.md  __init__.py  example.py
app/qrdata/: .gitignore  README.md  __init__.py  example.py  models.py
tests/: __init__.py  conftest.py  test_routes.py  test_signature.py
